--- a/index.html
+++ b/index.html
@@ -4,17 +4,67 @@
 
 <head>
     <meta charset="UTF-8">
-    <title></title>
+    <title>URL CheckPlus</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <!-- googlefont -->
+    <link href="https://fonts.googleapis.com/css?family=DM+Serif+Display&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/moment.min.js"></script>
-    <!-- link to css -->
-    <!-- <link rel="stylesheet" type="text/css" href="assets/css/style.css"> -->
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
 
-<body>
 
+<body>
+    <header>
+        <div class="container">
+            <div class="jumbotron mt-1 shadow-lg py-2">
+                <h1 class="text-center">URL CheckPlus</h1>
+            </div>
+        </div>
+    </header>
+
+    <!-- gives a little line break -->
+    <hr>
+
+    <section>
+        <div class="container">
+            <div class="row">
+
+                <div class="col-md-8 offset-md-2">
+                    <div class="card">
+                        <div class="card-header py-1">
+                            <h4 class="text-left mb-0">Check and Display</h4>
+                        </div>
+                        <div class="card-body m-2 p-0">
+                            <div class="input-group">
+                                <input type="text" class="form-control" placeholder="http://sketchwebsite.com">
+                                <div class="input-group-append">
+                                    <form role="form">
+                                        <button class="btn btn-outline-secondary" type="submit"
+                                            id="submit-button">Submit</button>
+                                    </form>
+                                </div>
+                            </div>
+                            <small id="url-help" class="form-text text-muted pl-1">Enter URL to view page and get
+                                security info</small>
+
+
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+           <hr>
+            <div class="row">
+                <div class="col-md-8 offset-md-2">
+                    <div class="m-1 p-1 d-none" id="answer"></div>
+                </div>
+            </div>
+        </div>
+
+
+    </section>
+    <script src="assets/js/app.js"></script>
 </body>
 
 </html>
