--- a/index.html
+++ b/index.html
@@ -56,10 +56,15 @@
             </div>
            <hr>
             <div class="row">
-                <div class="col-md-8 offset-md-2">
-                    <div class="m-1 p-1 d-none" id="answer">
-                        <div id="img">
-                            
+                <div class="col">
+                    <div class="m-1 p-1 d-none rounded shadow-lg d-flex flex-row align-items-center" id="answer">
+                        <div id="img" class="mr-2">
+
+                        </div>
+                        <div id="ratings">
+                            <div class="d-flex flex-column" id="stuff">
+                             
+                            </div>
                         </div>
                     </div>
                 </div>
