--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
             </div>
            <hr>
             <div class="row">
-                <div class="col">
-                    <div class="m-1 p-1 d-none rounded shadow-lg d-flex flex-row align-items-center" id="answer">
+                <div class="col d-none" id="answer">
+                    <div class="m-1 p-1 rounded shadow-lg d-flex flex-row align-items-center">
                         <div id="img" class="mr-2">
 
                         </div>
