UI/UX tweaks, removed text after search

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                         </div>
                         <div class="card-body m-2 p-0">
                             <div class="input-group">
-                                <input type="text" class="form-control" id="user-link" placeholder="http://sketchwebsite.com">
+                                <input type="text" class="form-control" id="user-link" placeholder="">
                                 <div class="input-group-append">
                                     <form role="form">
                                         <button class="btn btn-outline-secondary" type="submit"
@@ -54,7 +54,7 @@
                 </div>
 
             </div>
-           <hr>
+            <hr>
             <div class="row">
                 <div class="col d-none" id="answer">
                     <div class="m-1 p-1 rounded shadow-lg d-flex flex-row align-items-center">
@@ -63,7 +63,7 @@
                         </div>
                         <div id="ratings">
                             <div class="d-flex flex-column" id="stuff">
-                             
+
                             </div>
                         </div>
                     </div>
