added server for testing, and added test json file to get data on page

--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <!-- googlefont -->
     <link href="https://fonts.googleapis.com/css?family=DM+Serif+Display&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
 
@@ -41,36 +40,34 @@
                                 <div class="input-group">
                                     <input type="text" class="form-control" id="user-link" placeholder="">
                                     <div class="input-group-append">
-                                        <button class="btn btn-outline-secondary" type="submit"
-                                            id="submit-button">Submit</button>
+                                        <button class="btn btn-outline-secondary" type="submit" id="submit-button">Submit</button>
                                     </div>
                             </form>
 
-                        </div>
-                        <small id="url-help" class="form-text text-muted pl-1">Enter URL to view page and get
+                            </div>
+                            <small id="url-help" class="form-text text-muted pl-1">Enter URL to view page and get
                             security info</small>
 
-
+                        </div>
                     </div>
                 </div>
+
             </div>
+            <hr>
+            <div class="row">
+                <div class="col d-none" id="answer">
+                    <div class="m-1 p-1 rounded shadow-lg d-flex flex-row align-items-center">
+                        <div id="img" class="mr-2">
 
-        </div>
-        <hr>
-        <div class="row">
-            <div class="col d-none" id="answer">
-                <div class="m-1 p-1 rounded shadow-lg d-flex flex-row align-items-center">
-                    <div id="img" class="mr-2">
+                        </div>
+                        <div id="ratings">
+                            <div class="d-flex flex-column" id="stuff">
 
-                    </div>
-                    <div id="ratings">
-                        <div class="d-flex flex-column" id="stuff">
-
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
-        </div>
         </div>
 
 
