--- a/index.html
+++ b/index.html
@@ -62,6 +62,18 @@
                         </div>
                         <div id="ratings">
                             <div class="d-flex flex-column" id="stuff">
+                                    <div id="txt">
+                                            <div class="p-2"><h2>Domain Name: <span id="dName"></span></h2>
+                                            </div>
+                                                 <div class="p-2"><h2>Category: <span id="cat"></span></h2>
+                                                 </div>
+                                                      <div class="p-2"><h2>Reputation Score: <span id="rScore"></span></h2>
+                                                      </div>
+                                                        <div class="p-2"><h2>Warning(s): <span id="rWarnings"></span></h2>
+                                                   </div>
+                                               <div class="p-2"><h2>IP: <span id="ip"></span></h2>
+                                               </div>
+                                           </div>
 
                             </div>
                         </div>
