--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <header>
         <div class="container">
             <div class="jumbotron mt-1 shadow-lg py-2">
-                <h1 class="text-center">URL CheckPlus</h1>
+                <h1 class="text-center">URL Checker</h1>
             </div>
         </div>
     </header>
